# open_collector

./: LICENSE
open_collector/: CMakeLists.txt  ModuleAdapter.h  ModuleLibrary.h  ModuleNet.h  ModuleService.h  ModuleStorage.h  ServiceAdapter.cpp  ServiceAdapter.h  ServiceNet.h  ServiceService.h  UtilityLibrary.h  main.cpp
test/: CMakeLists.txt  main.cpp
